--- a/devconf2024/04_deploy_applications/devconf2024-application-01/base/100-deployment.yaml
+++ b/devconf2024/04_deploy_applications/devconf2024-application-01/base/100-deployment.yaml
@@ -23,7 +23,7 @@ spec:
         app.kubernetes.io/instance: devconf2024-application-01
     spec:
       containers:
-      - image: quay.io/jclaret/chatbot:latest
+      - image: quay.io/acm-gitops/chatbot:latest
         imagePullPolicy: Always
         name: devconf2024-application-01
         ports:
