Modified namespace policy.

--- a/devconf2024/05_policies/gitops_policy_namespace/base/100-policy.yaml
+++ b/devconf2024/05_policies/gitops_policy_namespace/base/100-policy.yaml
@@ -27,7 +27,7 @@ spec:
                 apiVersion: v1
                 kind: Namespace
                 metadata:
-                  name: rhte
+                  name: devconf
           pruneObjectBehavior: None
           remediationAction: inform
           severity: low
