--- a/devconf2024/04_deploy_applications/devconf2024-application-04/base/100-deployment.yaml
+++ b/devconf2024/04_deploy_applications/devconf2024-application-04/base/100-deployment.yaml
@@ -25,7 +25,7 @@ spec:
       containers:
         - name: spring-app
           image: >-
-            quay.io/ilago/tetris-4-k8s:latest
+            lrakai/tetris
           ports:
             - containerPort: 8080
               protocol: TCP
