--- a/devconf2024/04_deploy_applications/devconf2024-application-04/base/100-deployment.yaml
+++ b/devconf2024/04_deploy_applications/devconf2024-application-04/base/100-deployment.yaml
@@ -1,53 +1,34 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: devconf2024-application-04
-  namespace: devconf2024-application-04
+  creationTimestamp: null
   labels:
     app: devconf2024-application-04
     app.kubernetes.io/component: devconf2024-application-04
     app.kubernetes.io/instance: devconf2024-application-04
+  name: devconf2024-application-04
+  namespace: devconf2024-application-04
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels:
-      deployment: devconf2024-application-04
+      app.kubernetes.io/component: devconf2024-application-04
+      app.kubernetes.io/instance: devconf2024-application-04
+  strategy: {}
   template:
     metadata:
+      creationTimestamp: null
       labels:
-        deployment: devconf2024-application-04
+        app.kubernetes.io/component: devconf2024-application-04
+        app.kubernetes.io/instance: devconf2024-application-04
     spec:
-      volumes:
-        - name: configmap
-          configMap:
-            name: application-properties
-            defaultMode: 420
       containers:
-        - name: spring-app
-          image: >-
-            lrakai/tetris
-          ports:
-            - containerPort: 8080
-              protocol: TCP
-            - containerPort: 8443
-              protocol: TCP
-            - containerPort: 8778
-              protocol: TCP
-          resources: {}
-          volumeMounts:
-            - name: configmap
-              mountPath: /tmp/config
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
-          imagePullPolicy: IfNotPresent
-      restartPolicy: Always
-      terminationGracePeriodSeconds: 30
-      dnsPolicy: ClusterFirst
-      schedulerName: default-scheduler
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 25%
-      maxSurge: 25%
-  revisionHistoryLimit: 10
-  progressDeadlineSeconds: 600
+      - image: quay.io/acm-gitops/app-04:latest
+        imagePullPolicy: Always
+        name: devconf2024-application-04
+        ports:
+        - containerPort: 8080
+          protocol: TCP
+        resources: {}
+      serviceAccountName: default
+status: {}
